--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
