add: Forms , useContext , Auth Guards

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "generate-types": "supabase gen types typescript --project-id gtpsceyovcrmuxrrqiga --schema public > src/supabase.types.ts"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.2",
+    "@dicebear/core": "^9.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
