--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@supabase/supabase-js": "^2.46.1",
-    "@tanstack/react-query": "^5.61.0",
+    "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "dayjs": "^1.11.13",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.460.0",
