--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "rollup": "^4.30.1",
     "supabase": "^1.223.10",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
