--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,18 @@
 {
   "routes": [
     {
+      "src": "/public/(.*)",
+      "dest": "/public/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
-    }
-  ],
-  "headers": [
+    },
     {
-      "source": "/(.*).js",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/javascript"
-        }
-      ]
+      "src": "/(.*)",
+      "headers": {
+        "Cache-Control": "no-store"
+      }
     }
   ]
 }
