--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "check-ts": "tsc -b",
     "preview": "vite preview",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged",
     "generate-types": "supabase gen types typescript --project-id gtpsceyovcrmuxrrqiga --schema public > src/supabase.types.ts"
   },
   "homepage": ".",
@@ -59,6 +65,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
