--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "pre-commit": "lint-staged",
-    "generate-types": "supabase gen types typescript --project-id gtpsceyovcrmuxrrqiga --schema public > src/supabase.types.ts"
+    "generate-types": "supabase gen types typescript --project-id eilikoywuvucnsiqwubt --schema public > src/supabase/supabase.types.ts"
   },
   "homepage": ".",
   "dependencies": {
@@ -30,7 +30,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
-    "@supabase/supabase-js": "^2.46.1",
+    "@supabase/supabase-js": "^2.47.12",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -71,7 +71,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "rollup": "^4.30.1",
-    "supabase": "^1.223.10",
+    "supabase": "^1.226.4",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
