--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@supabase/supabase-js": "^2.47.12",
     "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-virtual": "^3.11.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
